<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileInfo">

    <TextView
        android:id="@+id/textViewUserQuestion"
        android:layout_width="163dp"
        android:layout_height="27dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/user_question"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="163dp"
        android:layout_height="27dp"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="227dp"
        android:layout_height="42dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileInfo"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/profile_info"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="227dp"
        android:layout_height="42dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginBottom="336dp"
        android:ems="10"
        android:hint="@string/display_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxChild"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_marginBottom="220dp"
        android:text="@string/child"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxPet"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_marginBottom="180dp"
        android:text="@string/pet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxNone"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_marginBottom="144dp"
        android:text="@string/other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/submit_btn"
        android:layout_width="255dp"
        android:layout_height="59dp"
        android:layout_gravity="start"
        android:layout_marginBottom="56dp"
        android:background="@drawable/round_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:text="@string/submit"
        android:textColor="#fffcfc"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="@+id/submit_btn"
        app:layout_constraintStart_toStartOf="@+id/submit_btn"
        app:layout_constraintTop_toTopOf="@+id/submit_btn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="47dp"
        android:layout_height="21dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="36dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>