<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    tools:context=".StartupActivity">

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="236dp"
        android:text="@string/fstext"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_margin="150dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="173dp"
        android:background="@drawable/round_btn"
        android:padding="8dp"
        android:text="@string/fsbutton1"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secTxt" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="229dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="332dp"
        android:background="@drawable/round_btn"
        android:padding="8dp"
        android:text="@string/fsbutton2"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:layout_constraintVertical_bias="0.111" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="361dp"
        android:layout_height="23dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="113dp"
        android:contentDescription="@string/fubar"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secTxt"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/group_17" />

</androidx.constraintlayout.widget.ConstraintLayout>